@@ -38,4 +38,14 @@
         layer="ftw.globalstatusmessage.interfaces.IGlobalStatusMessageLayer"
         />
 
+    <!-- A (hopefully) temporary addition to work around CMFPlone #2947 -->
+    <browser:viewlet
+        zcml:condition="have plone-5"
+        name="ftw.globalstatusmessage.styles"
+        manager="plone.app.layout.viewlets.interfaces.IHtmlHead"
+        template="viewlets/styles.pt"
+        permission="zope2.View"
+        layer="ftw.globalstatusmessage.interfaces.IGlobalStatusMessageLayer"
+        />
+
 </configure>
