@@ -8,6 +8,7 @@ Changelog
 - Make Plone 5.1 compatible. The global status message is displayed in a
   viewlet for Plone 5 (rather than a template slot). [djowett-ftw]
 
+- Work around duplication of the `plone.globalstatusmessage` viewlet.
 
 1.6.2 (2017-08-22)
 ------------------
